src_old/objects/ServiceException__c.object
<CustomObject>
    <description>Service Exception relates one or more Exceptions to a Service and defines if an Exception counts towards execution for a Service. Service Exception is related to Service and Exception.</description>
    <fields>
        <fullName>Active__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Exception__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Exception</label>
        <referenceTo>Exception__c</referenceTo>
        <relationshipLabel>Service Exceptions</relationshipLabel>
        <relationshipName>Service_Exceptions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Service__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Service</label>
        <referenceTo>Service__c</referenceTo>
        <relationshipLabel>Service Exceptions</relationshipLabel>
        <relationshipName>Service_Exceptions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>isExecuted__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Executed?</label>
        <type>Checkbox</type>
    </fields>
    <label>Service Exception</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>SE-{0000}</displayFormat>
        <label>Service Exception Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Service Exceptions</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>